# spellchecker

./: CMakeLists.txt  aspellchecker.cpp  aspellchecker.h  aspellchecker.inc  definitions.h  enchantchecker.cpp  enchantchecker.h  enchantchecker.inc  hunspellchecker.cmake  hunspellchecker.cpp  hunspellchecker.h  hunspellchecker.inc  install.inc  macspellchecker.h  macspellchecker.inc  spellbackend.cpp  spellbackend.h  spellchecker.cpp  spellchecker.h  spellchecker.pri  spellchecker.pro  spellhighlighter.cpp  spellhighlighter.h  spellplugin.cpp  spellplugin.h  spellplugin.pri  spellplugin.pro  translations.cmake
documents/: AUTHORS  CHANGELOG  INSTALL  README  TRANSLATORS
translations/de/: spellchecker.ts
translations/pl/: spellchecker.ts
translations/ru/: spellchecker.qm  spellchecker.ts  spellplugin.ts
translations/uk/: spellchecker.ts
