cmake_minimum_required(VERSION 2.8)

project(vacuum-spellchecker)
set(PLUGIN_NAME "spellchecker")
set(SOURCES spellchecker.cpp spellbackend.cpp spellhighlighter.cpp)
set(HEADERS spellchecker.h spellbackend.h spellhighlighter.h)
set(MOC_HEADERS spellchecker.h spellbackend.h spellhighlighter.h)
set(LOCALIZED_LANGS "ru;pl;de;uk")

if (UNIX AND NOT APPLE)
	set(SPELLCHECKER_BACKEND "ENCHANT" CACHE STRING "Name of engine that will be used in Spellchecker plugin")
else (UNIX AND NOT APPLE)
	set(SPELLCHECKER_BACKEND "HUNSPELL" CACHE STRING "Name of engine that will be used in Spellchecker plugin")
endif (UNIX AND NOT APPLE)

string(TOUPPER ${SPELLCHECKER_BACKEND} SPELLCHECKER_BACKEND)

if (SPELLCHECKER_BACKEND STREQUAL "ENCHANT" AND UNIX)
	FIND_PACKAGE(PkgConfig)
	pkg_check_modules(SYSTEM_ENCHANT enchant>=1.5.0)
	if (NOT SYSTEM_ENCHANT_FOUND)
		set(SPELLCHECKER_BACKEND "HUNSPELL")
		message(STATUS "System enchant not found, switching to hunspell")
	endif (NOT SYSTEM_ENCHANT_FOUND)
endif (SPELLCHECKER_BACKEND STREQUAL "ENCHANT" AND UNIX)

if (SPELLCHECKER_BACKEND STREQUAL "ASPELL")
	include("aspellchecker.cmake")
elseif (SPELLCHECKER_BACKEND STREQUAL "ENCHANT")
	include("enchantchecker.cmake")
elseif (SPELLCHECKER_BACKEND STREQUAL "HUNSPELL")
	include("hunspellchecker.cmake")
else (SPELLCHECKER_BACKEND STREQUAL "ASPELL")
	message(FATAL_ERROR "Please specify correct backend name: -DSPELLCHECKER_BACKEND=ASPELL or ENCHANT or HUNSPELL")
endif (SPELLCHECKER_BACKEND STREQUAL "ASPELL")

include("${CMAKE_SOURCE_DIR}/cmake/config.cmake")
include("${CMAKE_SOURCE_DIR}/cmake/translations.cmake")
include("${CMAKE_SOURCE_DIR}/cmake/plugin.cmake")
